--- a/plugins/dynamix.vm.manager/VMs.page
+++ b/plugins/dynamix.vm.manager/VMs.page
@@ -20,5 +20,10 @@ if ($var['fsState'] != "Started") {
   echo "<p class='notice'>Array must be <span class='strong big'>started</span> to view Virtual Machines.</p>";
   return;
 }
+if (!is_file('/var/run/libvirt/libvirtd.pid') || (!is_dir('/proc/'.@file_get_contents('/var/run/libvirt/libvirtd.pid')))) {
+  echo "<p class='notice'>Libvirt Service failed to start.</p>";
+  return;
+}
+
 if (count($pages)==2) $tabbed = false;
 ?>
