--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -79,6 +79,7 @@ span.tub span[id^='txt-tub']{margin-top:7px}
 #title span.right{font-size:20px;padding-right:10px;float:right}
 #title span img,#title p{display:none}
 #title:first-child{margin-top:0}
+#title.shift{margin-top:-12px}
 #clear{clear:both}
 #footer{position:fixed;bottom:0;left:0;color:#808080;background:#121510;padding:5px 0;width:100%;height:16px;line-height:16px;text-align:center;z-index:100}
 #statusraid{float:left;padding-left:10px}
