--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -56,6 +56,7 @@ input.trim{width:50px}
 #title span.left{font-size:15px}
 #title span.right{font-size:13px;padding-top:2px;padding-right:10px;float:right}
 #title span img{padding-right:4px}
+#title.shift{margin-top:-30px}
 #menu{position:fixed;top:90px;left:0;width:100%;height:40px;line-height:40px;padding:0;margin:0;font-size:13px;background:#f2f2f2;z-index:101}
 #nav-block{overflow:hidden;height:40px;letter-spacing:2px}
 #nav-left{float:left}
