--- a/plugins/dynamix/styles/default-black.css
+++ b/plugins/dynamix/styles/default-black.css
@@ -237,6 +237,7 @@ div.spinner .unraid_mark_2,div .unraid_mark_4{animation:mark_2 1.5s ease infinit
 div.spinner .unraid_mark_3{animation:mark_3 1.5s ease infinite}
 div.spinner .unraid_mark_6,div .unraid_mark_8{animation:mark_6 1.5s ease infinite}
 div.spinner .unraid_mark_7{animation:mark_7 1.5s ease infinite}
+div.domain{margin-top:-20px}
 @keyframes mark_2{50% {transform:translateY(-40px)} 100% {transform:translateY(0px)}}
 @keyframes mark_3{50% {transform:translateY(-62px)} 100% {transform:translateY(0px)}}
 @keyframes mark_6{50% {transform:translateY(40px)} 100% {transform:translateY(0px)}}
